fixed some circular dependencies.  New build ready to install in the Libraries/Perl/FAIR/FAIR_Data-0.18 folder.

--- a/Documentation/FormalSpecification/W3C-FormattedSpecification.html
+++ b/Documentation/FormalSpecification/W3C-FormattedSpecification.html
@@ -51,14 +51,15 @@
     <section class='informative'>
       <h2>Introduction</h2>
       <p>
-Data FAIRport were first conceived at the "Jointly Designing a Data FAIRport" meeting in Leiden, 2014.  The objective of the FAIRport initiative is to encourage, and provide migration pathways for, public and private data repositories to make their data Findable, Accessible, Interoperable, and Reusable (FAIR).  </p>
+<a href='http://datafairport.org'>Data FAIRports</a> were first conceived at the "Jointly Designing a Data FAIRport" meeting in Leiden, 2014.  The objective of the FAIRport initiative is to encourage, and provide migration pathways for, public and private data repositories to make their data Findable, Accessible, Interoperable, and Reusable (FAIR).  </p>
 <p>   At this initial FAIRport meeting, a self-selecting group of "hackers" decided to assemble the FAIRport Skunkworks team.  Their objective was to create early prototypes of FAIR behaviors, and explore a variety of approaches to cross-resource (meta)data description, discovery, accessibility, and interoperability.  This specification describes release 0.1 of the FAIRport specification and design patterns conceived by the Skunkworks team members through a series of teleconferences and hackathons.</p>
     </section>
     <section class='conformance'> Conformance?  That wouldn't be very Skunky!
     </section>
     <section>
         <h2>What is a FAIRport?</h2>
-        A FAIRport is one or more of: 
+        A FAIRport is one or more of several components (where the more components implemented brings greater compliance with the <a href='https://www.force11.org/group/fairgroup/fairprinciples'>
+        FAIR Principles</a>): 
         <ul>
             <li>A meta-descriptor (called a "FAIR Profile) of a desired "Projection" of the (meta)data in a repository - "what could the data look like?" (rather than "what DOES the data look like?")</li>
             <li>An "Accessor" script that provides the URIs for every record in a the resource, or any "slice" of that resource; it also provides the URI for every representation (e.g. syntactc)  of that record that is provided by the resource </li>
