--- a/Documentation/FormalSpecification/W3C-FormattedSpecification.html
+++ b/Documentation/FormalSpecification/W3C-FormattedSpecification.html
@@ -54,7 +54,26 @@
 <a href='http://datafairport.org'>Data FAIRports</a> were first conceived at the "Jointly Designing a Data FAIRport" meeting in Leiden, 2014.  The objective of the FAIRport initiative is to encourage, and provide migration pathways for, public and private data repositories to make their data Findable, Accessible, Interoperable, and Reusable (FAIR).  </p>
 <p>   At this initial FAIRport meeting, a self-selecting group of "hackers" decided to assemble the FAIRport Skunkworks team.  Their objective was to create early prototypes of FAIR behaviors, and explore a variety of approaches to cross-resource (meta)data description, discovery, accessibility, and interoperability.  This specification describes release 0.1 of the FAIRport specification and design patterns conceived by the Skunkworks team members through a series of teleconferences and hackathons.</p>
     </section>
-    <section class='conformance'> Conformance?  That wouldn't be very Skunky!
+    <section class='conformance'>
+      <h2>Conformance</h2>
+      As well as sections marked as non-normative, all authoring guidelines, diagrams, examples, and notes in this specification are non-normative. Everything else in this specification is normative.
+
+The key words <em class="rfc2119" title="must">must</em>
+,
+<em class="rfc2119" title="must not">must not</em>
+,
+<em class="rfc2119" title="required">required</em>
+,
+<em class="rfc2119" title="should">should</em>
+,
+<em class="rfc2119" title="should not">should not</em>
+,
+<em class="rfc2119" title="recommended">recommended</em>
+,
+<em class="rfc2119" title="may">may</em>
+, and
+<em class="rfc2119" title="optional">optional</em> in this specification are to be interpreted as described in [RFC2119].
+
     </section>
     <section>
         <h2>What is a FAIRport?</h2>
