changed the base URI of the fairport OWL now that Luiz has set-up an Apache redirect.

--- a/Documentation/FormalSpecification/W3C-FormattedSpecification.html
+++ b/Documentation/FormalSpecification/W3C-FormattedSpecification.html
@@ -58,21 +58,7 @@
       <h2>Conformance</h2>
       As well as sections marked as non-normative, all authoring guidelines, diagrams, examples, and notes in this specification are non-normative. Everything else in this specification is normative.
 
-The key words <em class="rfc2119" title="must">must</em>
-,
-<em class="rfc2119" title="must not">must not</em>
-,
-<em class="rfc2119" title="required">required</em>
-,
-<em class="rfc2119" title="should">should</em>
-,
-<em class="rfc2119" title="should not">should not</em>
-,
-<em class="rfc2119" title="recommended">recommended</em>
-,
-<em class="rfc2119" title="may">may</em>
-, and
-<em class="rfc2119" title="optional">optional</em> in this specification are to be interpreted as described in [RFC2119].
+The key words MUST, MUST NOT, REQUIRED,SHOULD,SHOULD NOT, RECOMMENDED, MAY, and OPTIONAL in this specification are to be interpreted as described in [[RFC2119]].
 
     </section>
     <section>
