--- a/Documentation/FormalSpecification/W3C-FormattedSpecification.html
+++ b/Documentation/FormalSpecification/W3C-FormattedSpecification.html
@@ -76,7 +76,7 @@ The key words MUST, MUST NOT, REQUIRED,SHOULD,SHOULD NOT, RECOMMENDED, MAY, and 
         There are several components that combine to make a fully-functional Data FAIRport.  Not all of these components are required, some may or may not be inter-dependent, and the components map loosely onto the 'F', 'A', and 'I' of the FAIR data concepts.
         <section>
             <h2>The FAIR Profile ('F')</h2>
-            FAIR Profiles are a meta-descriptor of the data.   A FAIR Profile describes one (of possibly many) RDF models that could represent the raw data in the native repository.  Effectively, the FAIR Profile describes a "lens" (http://ceur-ws.org/Vol-951/paper5.pdf) through which the data can be projected; when projected through this "lens", it will adopt a desired format, as described by the Profile. FAIR Profiles are instances of the <a href='https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl'>FAIR Profile Ontology</a>.   
+            A FAIR Profile is a meta-descriptor that provides a meta-schema for one (of possibly many) RDF models that could represent the data present in the repository (regardless of its native format or representation).  Effectively, the FAIR Profile describes a "lens" (http://ceur-ws.org/Vol-951/paper5.pdf) through which the data can be projected; when projected through this "lens", it will adopt a the format described by the Profile. FAIR Profiles are instances of the <a href='https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl'>FAIR Profile Ontology</a>.   
         </section>
         <section>
             <h2>The FAIR Accessor ('A')</h2>
@@ -90,9 +90,12 @@ The key words MUST, MUST NOT, REQUIRED,SHOULD,SHOULD NOT, RECOMMENDED, MAY, and 
     </section>
     <section>
         <h2> FAIR Profiles in Detail</h2>
-        FAIR Profiles describe the structure of RDF data.  They take the form of a meta-schema, defined by the <a href='https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl'>FAIR Profile Ontology</a>.  The FAIR Profile Ontology defines a small number of classes and relations.  The core structure of a FAIR Profile is as follows:
+        FAIR Profiles describe the structure of RDF data.  They take the form of a meta-schema, defined by the <a href='http://datafairport.org/schemas/FAIR-schema.owl'>FAIR Profile Ontology</a>.  The FAIR Profile Ontology defines a small number of classes and relations.  The core structure of a FAIR Profile is as follows:
         
-        <pre class="example">class:FAIR-Profile  prop:hasClass  class:FAIR-Class  prop:hasProperty  class:FAIR-Property  prop:allowedValues  [value-restriction] </pre>
+        <pre class="example">  (TODO  MAKE THIS AN IMAGE)
+          class:FAIR-Class  prop:hasProperty  class:FAIR-Property
+                                              prop:allowedValues  [value-restriction]
+                            dc:provenance class:FAIR-Profile </pre>
         <ul>
             
             <li>the FAIR-Profile class contains information about the publisher of the Profile, and other useful metadata</li>
@@ -102,42 +105,51 @@ The key words MUST, MUST NOT, REQUIRED,SHOULD,SHOULD NOT, RECOMMENDED, MAY, and 
         </ul>
         <section>
         <h2>Examples of FAIR Profiles</h2>
-    This is a very simple FAIR Profile that describes a portion of the the Allele records of <a href='http://antirrhinum.net'>DragonDB</a>.  It tells us that it will project the Allele, and one property of those Alleles - an image of the mutant plant - which will be classified according to the SKOS Concept Scheme at <a href='http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81'>http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81</a>.   (a discussion of these concept schemes is elsewhere [link]).
+    This is a very simple FAIR Profile that describes one way of looking at an "Allele" record.  It tells us that it will project the Allele, and one property of that Allele - an image of the mutant - which will be classified according to the SKOS Concept Scheme at <a href='http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81'>http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81</a>.   (a discussion of these concept schemes is elsewhere [link]).
     <pre class='example highlight'>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot;?&gt;
 &lt;rdf:RDF xmlns:rdf=&quot;http://www.w3.org/1999/02/22-rdf-syntax-ns#&quot;&gt;
-&lt;rdf:Description xmlns:ns1=&quot;https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl#&quot; xmlns:ns2=&quot;http://purl.org/dc/terms/&quot; xmlns:ns3=&quot;http://www.w3.org/2000/01/rdf-schema#&quot; rdf:about=&quot;http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf&quot;&gt;
-	&lt;ns1:hasClass rdf:resource=&quot;http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf#DragonAlleleClass&quot;/&gt;
-	&lt;ns1:schemardfs_URL rdf:resource=&quot;http://fairdata.org/ontology/FAIR-Data#&quot;/&gt;
-	&lt;ns2:description&gt;FAIR Profile the Image portion of Allele records of DragonDB using SIO:Image classification&lt;/ns2:description&gt;
+&lt;rdf:Description xmlns:ns1=&quot;http://datafairport.org/schemas/FAIR-schema.owl#&quot;
+          xmlns:ns2=&quot;http://purl.org/dc/terms/&quot;
+          xmlns:ns3=&quot;http://www.w3.org/2000/01/rdf-schema#&quot;
+          rdf:about=&quot;http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf&quot;&gt;
+	&lt;ns1:hasProperty rdf:resource=&quot;http://datafairport.org/sampledata/profileschemaproperty/f8cda720-2118-4fca-9a82-2ff5e8812699&quot;/&gt;
+	&lt;ns1:onClassType rdf:resource=&quot;http://purl.obolibrary.org/obo/SO_0001023&quot;/&gt;
+	&lt;ns2:provenance rdf:resource=&quot;http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf#Profile&quot;/&gt;
+	&lt;rdf:type rdf:resource=&quot;http://datafairport.org/schemas/FAIR-schema.owl#FAIRClass&quot;/&gt;
+	&lt;ns3:label&gt;FAIR Class of Allele&lt;/ns3:label&gt;
+&lt;/rdf:Description&gt;
+&lt;rdf:Description xmlns:ns1=&quot;http://datafairport.org/schemas/FAIR-schema.owl#&quot;
+        xmlns:ns2=&quot;http://purl.org/dc/terms/&quot;
+        xmlns:ns3=&quot;http://www.w3.org/2000/01/rdf-schema#&quot;
+        rdf:about=&quot;http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf#Profile&quot;&gt;
+	&lt;ns1:hasClass rdf:resource=&quot;http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf&quot;/&gt;
+	&lt;ns1:schemardfs_URL rdf:resource=&quot;http://datafairport.org/schemas/FAIR-schema.owl#&quot;/&gt;
+	&lt;ns2:description&gt;FAIR Profile the Image portion of an Allele record using SIO:Image classification&lt;/ns2:description&gt;
 	&lt;ns2:identifier&gt;doi:Mark.Dragon.P2&lt;/ns2:identifier&gt;
 	&lt;ns2:license&gt;Anyone may use this freely&lt;/ns2:license&gt;
 	&lt;ns2:organization&gt;wilkinsonlab.info&lt;/ns2:organization&gt;
-	&lt;ns2:title&gt;FAIR Profile the Image portion of Allele records of DragonDB using SIO:Image classification&lt;/ns2:title&gt;
-	&lt;rdf:type rdf:resource=&quot;https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl#FAIRProfile&quot;/&gt;
-	&lt;ns3:label&gt;FAIR Profile the Image portion of Allele records of DragonDB using SIO:Image classification&lt;/ns3:label&gt;
+	&lt;ns2:title&gt;FAIR Profile the Image portion of an Allele record&lt;/ns2:title&gt;
+	&lt;rdf:type rdf:resource=&quot;http://datafairport.org/schemas/FAIR-schema.owl#FAIRProfile&quot;/&gt;
+	&lt;ns3:label&gt;FAIR Profile of Allele Images(SIO)&lt;/ns3:label&gt;
 &lt;/rdf:Description&gt;
-&lt;rdf:Description xmlns:ns1=&quot;http://fairdata.org/ontology/FAIR-Data#&quot; xmlns:ns2=&quot;http://www.w3.org/2000/01/rdf-schema#&quot; rdf:about=&quot;http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf#DragonAlleleClass&quot;&gt;
-	&lt;ns1:hasProperty rdf:resource=&quot;http://datafairport.org/sampledata/profileschemaproperty/991f68c2-f43f-4dd6-bf3b-68dafebb6a57&quot;/&gt;
-	&lt;ns1:onClassType rdf:resource=&quot;http://purl.obolibrary.org/obo/SO_0001023&quot;/&gt;
-	&lt;rdf:type rdf:resource=&quot;https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl#FAIRClass&quot;/&gt;
-	&lt;ns2:label&gt;FAIR Class of DragonDB Allele&lt;/ns2:label&gt;
-&lt;/rdf:Description&gt;
-&lt;rdf:Description xmlns:ns1=&quot;http://fairdata.org/ontology/FAIR-Data#&quot; xmlns:ns2=&quot;http://www.w3.org/2000/01/rdf-schema#&quot; rdf:about=&quot;http://datafairport.org/sampledata/profileschemaproperty/991f68c2-f43f-4dd6-bf3b-68dafebb6a57&quot;&gt;
+&lt;rdf:Description xmlns:ns1=&quot;http://datafairport.org/schemas/FAIR-schema.owl#&quot; xmlns:ns2=&quot;http://www.w3.org/2000/01/rdf-schema#&quot; rdf:about=&quot;http://datafairport.org/sampledata/profileschemaproperty/f8cda720-2118-4fca-9a82-2ff5e8812699&quot;&gt;
 	&lt;ns1:allowedValues rdf:resource=&quot;http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81&quot;/&gt;
 	&lt;ns1:onPropertyType rdf:resource=&quot;http://semanticscience.org/ontology/SIO_000205&quot;/&gt;
-	&lt;rdf:type rdf:resource=&quot;https://github.com/FAIRDataInitiative/DataFairPort/blob/master/Schema/FAIR-schema.owl#FAIRProperty&quot;/&gt;
+	&lt;rdf:type rdf:resource=&quot;http://datafairport.org/schemas/FAIR-schema.owl#FAIRProperty&quot;/&gt;
 	&lt;ns2:label&gt;is represented by&lt;/ns2:label&gt;
 &lt;/rdf:Description&gt;
 &lt;/rdf:RDF&gt;
+
     </pre>
-    (see original file <a href='http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf'>here</a>)
+    (see original file <a href='http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf'>here</a>)
    <ul> 
-<li>This profile is identified as <code class='highlight'>http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf</code> and has the title "FAIR Profile the Image portion of Allele records of DragonDB using SIO:Image classification".</li>  
-<li>It tells us that the Profile contains a single Class, identified as <code class='highlight'>http://biordf.org/DataFairPort/ProfileSchemas/DragonDB_Allele_ProfileImagesSIO.rdf#DragonAlleleClass</code> (in this case, the Class is in the same document, but it doesn't need to be - <b>these definitions are intended to be modular, and can exist independently anywhere on the Web</b>). </li> 
-<li>Inspecting that Class, we find that, in the RDF projection, it is going to be rdf:type http://purl.obolibrary.org/obo/SO_0001023 (Sequence Ontology "Allele" Class).  We also see that the Allele Class of these projected RDF individuals will have one property, which is defined by a locally-identified individual called <code class='highlight'>http://datafairport.org/sampledata/profileschemaproperty/991f68c2-f43f-4dd6-bf3b-68dafebb6a57</code>) </li>
+<li>The Class described by this Profile is identified by its URL <code class='highlight'>http://biordf.org/DataFairPort/ProfileSchemas/Allele_Profile_SIO.rdf</code>.</li>
+<li>In it's metadata (#Profile) we find that it has the title "FAIR Profile the Image portion of an Allele record", among other useful bits of information</li>  
+<li>In this case, the FAIR Class definition and its FAIR Profile metadata are in the same document, but it doesn't need to be so. <b>FAIR Classes could share the same FAIR Profile metadata, which may be in an independent document anywhere on the Web</b>. </li> 
+<li>Inspecting that Class, we find that, in the RDF projection, it is going to be  <code class='highlight'> rdf:type http://purl.obolibrary.org/obo/SO_0001023>code> (Sequence Ontology "Allele" Class).  We also see that the Allele Class of these projected RDF individuals will have one property, which is defined by a locally-identified individual called <code class='highlight'>http://datafairport.org/sampledata/profileschemaproperty/991f68c2-f43f-4dd6-bf3b-68dafebb6a57</code>) </li>
 <li>Inspecting that property, we find that this property in the projected RDF will be <code class='highlight'>http://semanticscience.org/ontology/SIO_000205</code>, which is the SIO ontology's "is represented by" property.</li>
-<li>Finally, the allowedValues tells us that the values of this property are constrained to be one of the URIs in the ConceptScheme located at <code class='highlight'>http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81</code> (this is a SKOSified slice of the OWL Classes along the "Image" branch of the SIO ontology)... this means that, in the RDF Projection, the value of the "is represented by" predicate will be some kind of SIO:Image</li>
+<li>Finally, the allowedValues tells us that the values of this property are constrained to be one of the URIs in the SKOS ConceptScheme located at <code class='highlight'>http://biordf.org/DataFairPort/ConceptSchemes/SIOOntologyImage81</code> (this is a SKOSified slice of the OWL Classes along the "Image" branch of the SIO ontology)... this means that, in the RDF Projection, the value of the "is represented by" predicate will be some kind of SIO:Image</li>
 </ul>
 
 The RDF of an Allele record projected through this FAIR Profile will, therefore, look like this:
